@@ -1,3 +1,7 @@
+# imports
+importFrom(e1071,allShortestPaths)
+importFrom(proxy,dist)
+importFrom(proxy,as.dist)
 # standard functions
 export(somgrid,batchsom,colorCode,mapToUnit,grid2lines,componentPlane,hitMap)
 export(umatrix,error.kaskilagus,error.quantisation,som.tune,som.tunecontrol)
@@ -44,6 +48,3 @@ S3method(plot,somtune)
 S3method(print,somtune)
 # C code
 useDynLib(yasomi)
-# imports
-importFrom(e1071,allShortestPaths)
-importFrom(proxy,dist)
